@@ -1,0 +1,17 @@
+<configuration>
+	<components>
+		<component 
+			id="component" 
+			type="Castle.Windsor.Tests.Components.ComponentWithStringProperty, Castle.Windsor.Tests">
+
+			<parameters>
+<?if devel?>
+				<name>John Doe</name>
+<?else?>
+				<name>Hammett</name>
+<?end?>
+			</parameters>
+			
+		</component>
+	</components>		
+</configuration>
