@@ -195,6 +195,7 @@
     <Compile Include="IContainerAccessor.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IEnvironmentInfo.cs" />
     <Compile Include="InitializationException.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -227,6 +228,9 @@
     <None Include="..\..\CastleKey.snk">
       <Link>CastleKey.snk</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
